package controller;

import java.util.ArrayList;
import java.util.List;

import model.Room;

public class Labyrinth {
    private List<Room> roomList;

    public Labyrinth() {
        roomList = new ArrayList<Room>();
    }

    public void randomMove() {

    }

    public void generateFromFile(String filename) {

    }
    
}
