package model;

public interface ITimedEntity {
    public void timerEnd();
}
