package model;

public interface ITimer {
    public void timerEnd();
}
